# zk-strategy-verify

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  vector_submission.md
.github/workflows/: ci.yml
bindings/ts/: package.json
bindings/ts/src/: index.ts
contracts/: StrategyIntegrityVerifier.sol
crates/verifier/: Cargo.toml
crates/verifier/src/: error.rs  journal.rs  lib.rs  policy.rs  receipt.rs  verdict.rs
crates/verifier/tests/: conformance.rs
crates/verify-cli/: Cargo.toml
crates/verify-cli/src/: main.rs
examples/: journal_fail.json  journal_pass.json  policy.json
spec/: gate_policy.schema.draft.json  gate_policy.schema.json
vectors/: README.md
vectors/fail/: cost_floor_understated.json  disclosure_required_but_minimal.json  exposure_card_inconsistent.json  future_format_version.json  intrabar_required_but_close_marked.json  lookahead_contaminated.json  policy_mismatch.json  regime_policy_shopped.json  strategy_revealed.json
vectors/pass/: clean_strategy.json  v1_close_marked.json  v4_disclosing.json
