[workspace]
resolver = "2"
members = ["crates/verifier", "crates/verify-cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/muaviamohammed/zk-strategy-verify"
authors = ["Muavia Mohammed"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
